--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,11 @@ find_package(Qt5 COMPONENTS Core Widgets REQUIRED)
 file(GLOB_RECURSE SOURCES "src/*.cpp" "src/*.ui" "src/*.qrc")
 
 add_executable(studio MACOSX_BUNDLE WIN32 ${SOURCES})
-set_target_properties(studio PROPERTIES OUTPUT_NAME "Chantage Studio")
 target_include_directories(studio PRIVATE src)
 target_link_libraries(studio Qt5::Core Qt5::Widgets)
+set_target_properties(
+    studio
+    PROPERTIES
+    OUTPUT_NAME "Chantage Studio"
+    MACOSX_BUNDLE_INFO_PLIST "${CMAKE_SOURCE_DIR}/Info.plist.in"
+    )
